--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.2.7"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14"
   }
 }
